# backend-server-poc

./: .astylerc  .gitattributes  .gitignore  .valgrind.supp  .valgrindrc  CMakeLists.txt  Doxyfile  KWStyle.xml  README.md  common_compiler_config.cmake
CMakeModules/: CommonCompilerConfig.cmake  FindGTestSrc.cmake
doc/: main.md
include/dummy/: dummy.h
scripts/: format.sh  gen_doc.sh  install_kwstyle.sh  lint.sh  make.sh  run_tests.sh
src/: CMakeLists.txt  main.cpp
src/dummy/: dummy.cpp
test/: CMakeLists.txt
test/unittest/: CMakeLists.txt  test_dummy.cpp  unittest.cpp
